--- a/Noti/Noti.vcxproj.filters
+++ b/Noti/Noti.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="argv.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="noti.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -35,5 +38,10 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="readme.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="noti.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
